# orz

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  bench.py  bench.rsscript  cbindgen.toml
.github/workflows/: enwik8-benchmark.yml  enwik8-test.yml  rust.yml
benchmark-tool/: Cargo.toml
benchmark-tool/src/: main.rs
cffi/: Makefile
cffi-demo/: Makefile  orz-cffi-demo.c
src/: aux.rs  auxility.rs  bit_queue.rs  bits.rs  build.rs  byteslice.rs  coder.rs  ffi.rs  huffman.rs  ioutil.rs  lib.rs  lz.rs  main.rs  matcher.rs  matchfinder.rs  mem.rs  mtf.rs  opt.rs  progress.rs  symrank.rs
src/_constants/: lz_roid_array.rs  mod.rs  mtf_array.rs
src/orz/: huff.rs  lempziv.rs  matchfinder.rs  mod.rs  mtf.rs  orz.rs
src/orz/constants/: LZ_MATCH_INDEX_BITS_LEN_ARRAY.txt  LZ_MATCH_INDEX_ENCODING_ARRAY.txt  LZ_MATCH_INDEX_ID_BASE_ARRAY.txt  MTF_INIT_ARRAY.txt  MTF_NEXT_ARRAY.txt  MTF_REV_ARRAY.txt  lempziv_constants.rs  mod.rs  mtf_constants.rs
test/: bible.txt.xz
