[package]
authors = ["Zhang Li <richox@qq.com>"]
build = "src/build.rs"
edition = "2024"
name = "orz"
version = "1.6.1"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
binary-heap-plus = "0.5.0"
byteorder = "1.5.0"
log = "0.4.27"
simplelog = "0.12.2"
unchecked-index = "0.2.2"
libc = "0.2.174"
modular-bitfield = "0.12.0"
clap = { version = "4.5.45", features = ["derive"] }
foldhash = "0.1.5"

[profile]
[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
