[package]
authors = ["Zhang Li <richox@qq.com>"]
edition = "2024"
name = "orz"
version = "1.6.1"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
binary-heap-plus = "0.5.0"
clap = { version = "4.5.53", features = ["derive"] }
modular-bitfield = "0.12.0"
unchecked-index = "0.2.2"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
