# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
authors = ["Zhang Li <richox@qq.com>"]
edition = "2024"
name = "orz"
version = "1.6.1"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
bitfield-struct = "0.12.1"
clap = { version = "4.5.59", features = ["derive"] }
unchecked-index = "0.2.2"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
