# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
authors = ["Zhang Li <richox@qq.com>"]
edition = "2024"
name = "benchmark-tool"
version = "0.1.0"

[dependencies]
checksums = "0.9.1"
libc = "0.2.132"
madato = "0.5.3"
num-format = "0.4.0"
subprocess = "0.2.9"
tempfile = "3.3.0"
